# NSL-3130AA-YOLOv8-Pose-estimation

./: CMakeLists.txt  main.h
data/: lidar_data_source.py  lidar_test2.py  track_plot.py
lidar/: NSL3130AA.cpp  NSLFrame.h  videoSource.cpp
tools/: ImageTools.cpp
yolo/: YoloDet.cpp  YoloDet.h
